--- a/www/index.html
+++ b/www/index.html
@@ -8,6 +8,7 @@
 
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, target-densitydpi=device-dpi" />
 
+        <link rel="stylesheet" type="text/css" href="css/misfotos.css" />
         <link rel="stylesheet" type="text/css" href="css/galeria.css" />
         <link rel="stylesheet" type="text/css" href="css/detailParque.css" />
         <link rel="stylesheet" type="text/css" href="css/lateralMenu.css" />
